// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ButtonPrimary when asked to render disabled matches snapshot 1`] = `
<button
  aria-label="Test button label"
  className="bg-primary-300 text-white text-lg font-bold py-3 rounded-xl hover:bg-primary-300/90 active:bg-primary-300/80 disabled:bg-neutral-400 disabled:dark:bg-neutral-700 disabled:text-white/60 disabled:cursor-not-allowed focus-visible:ring-4 focus-visible:ring-focus focus:outline-none focus-visible:outline-none"
  data-test-id="test-button"
  disabled={true}
  id="test-button"
  type="button"
>
  Test Button
</button>
`;

exports[`ButtonPrimary when asked to render with additional class matches snapshot 1`] = `
<button
  aria-label="Test button label"
  className="bg-primary-300 text-white text-lg font-bold py-3 rounded-xl hover:bg-primary-300/90 active:bg-primary-300/80 disabled:bg-neutral-400 disabled:dark:bg-neutral-700 disabled:text-white/60 disabled:cursor-not-allowed focus-visible:ring-4 focus-visible:ring-focus focus:outline-none focus-visible:outline-none some-class"
  data-test-id="test-button"
  id="test-button"
  type="button"
>
  Test Button
</button>
`;

exports[`ButtonPrimary when asked to render with children matches snapshot 1`] = `
<button
  aria-label="Test button label"
  className="bg-primary-300 text-white text-lg font-bold py-3 rounded-xl hover:bg-primary-300/90 active:bg-primary-300/80 disabled:bg-neutral-400 disabled:dark:bg-neutral-700 disabled:text-white/60 disabled:cursor-not-allowed focus-visible:ring-4 focus-visible:ring-focus focus:outline-none focus-visible:outline-none"
  data-test-id="test-button"
  id="test-button"
  type="button"
>
  Test Button
</button>
`;
